in progess tror det har noget med allowed origin chat gpt